# wairz

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  launch.sh  mkdocs.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 01ac34151ca4_add_analysis_cache_table.py  1ad845518fb9_initial_schema.py  6544325a309a_add_cwe_ids_to_findings.py  66238ac7e12c_add_conversations_table.py  91333b7f0e16_add_findings_table.py  a1b2c3d4e5f6_add_firmware_version_label.py  a8b3c1d2e4f5_add_security_reviews.py  b1c2d3e4f5a6_add_sbom_tables.py  b2c3d4e5f6a7_unique_analysis_cache_index.py  c2d3e4f5a6b7_add_emulation_sessions.py  c3d4e5f6a7b8_add_stub_profile_to_presets.py  d3e4f5a6b7c8_add_kernel_path_to_firmware.py  d4e5f6a7b8c9_add_extraction_dir_to_firmware.py  e4f5a6b7c8d9_add_fuzzing_tables.py  e5f6a7b8c9d0_add_uart_sessions.py  f356fb45973c_add_documents_table.py  f5a6b7c8d9e0_add_emulation_presets.py  f6a7b8c9d0e1_add_vuln_resolution_and_ai_severity.py
backend/app/: config.py  database.py  main.py  mcp_server.py
backend/app/ai/: __init__.py  agent_config.py  orchestrator.py  system_prompt.py  tool_registry.py
backend/app/models/: __init__.py  analysis_cache.py  conversation.py  document.py  emulation_preset.py  emulation_session.py  finding.py  firmware.py  fuzzing.py  project.py  sbom.py  security_review.py  uart_session.py
backend/app/routers/: analysis.py  chat.py  comparison.py  (+14 more)
backend/tests/: test_binary_tools.py  test_chat.py  test_orchestrator.py  test_string_tools.py  test_tool_registry.py
(+170 files in other folders)
